# DND-DM-Helper

./: CMakeLists.txt  NPC.cpp  README.md  TODO.md  alignment.h  classtype.h  divinite.h  widget.cpp  widget.h  widget.ui
DND-DM-Helper-Linux/: CMakeLists.txt  NPC.cpp  NPC.h  README.md  Race.cpp  Race.h  TODO.md  alignment.cpp  alignment.h  classtype.cpp  divinite.cpp  main.cpp  widget.cpp  widget.h  widget.ui
DND-DM-Helper-Linux/conf/: NPC_conf.yaml  conf.yaml
DND-DM-Helper-Windows/: CMakeCache.txt  CMakeLists.txt  README.md  Race.cpp  classtype.cpp  classtype.h  cmake_install.cmake  divinite.cpp  divinite.h  widget.ui
DND-DM-Helper-Windows/.qt/: QtDeploySupport.cmake
DND-DM-Helper-Windows/conf/: conf.yaml
DND-DM-Helper_GUI/: CMakeLists.txt  NPC.cpp  NPC.h  README.md  Race.cpp  Race.h  alignment.cpp  alignment.h  classtype.cpp  classtype.h  cmake_install.cmake  divinite.cpp  divinite.h  main.cpp  mainmenu.cpp  mainmenu.ui  npcbattlestats.cpp  npcbattlestats.h  npcbattlestats.ui  widget.cpp  widget.h  widget.ui
DND-DM-Helper_GUI/.qt/: QtDeployTargets.cmake
DND-DM-Helper_GUI/.qtcreator/: CMakeLists.txt.user.e4ca65a
DND-DM-Helper_GUI/conf/: Armor_conf.yaml  Item_conf.yaml  Weapon_conf.yaml  conf.yaml
DND-DM-Helper_GUI/conf/test/: Test_NPC_conf.yaml  conf_Armor_test.yaml
DND-DM-Helper_GUI/include/: NPC.h  Race.h  classtype.h  damage_dice.h  divinite.h  mainmenu.h  npcbattlestats.h  weapon.h  widget.h
DND-DM-Helper_GUI/include/Export/: pdfexporter.h
DND-DM-Helper_GUI/include/Inventory/: armor.h  item.h  weapon.h
DND-DM-Helper_GUI/include/NPC/: NPC.h  Race.h  divinite.h
DND-DM-Helper_GUI/include/UI/: npcbattlestats.h  widget.h
DND-DM-Helper_GUI/src/: NPC.cpp  Race.cpp  armor.cpp  classtype.cpp  damage_dice.cpp  divinite.cpp  main.cpp  npcbattlestats.cpp  weapon.cpp  widget.cpp
DND-DM-Helper_GUI/src/Export/: pdfexporter.cpp
DND-DM-Helper_GUI/src/Inventory/: armor.cpp  damage_dice.cpp  item.cpp  weapon.cpp
DND-DM-Helper_GUI/src/NPC/: NPC.cpp  Race.cpp  alignment.cpp  classtype.cpp  divinite.cpp
DND-DM-Helper_GUI/src/UI/: npcbattlestats.cpp  widget.cpp
DND-DM-Helper_GUI/test/: tst_armor.cpp  tst_armor.qml  tst_classtype.cpp  tst_item.cpp  tst_npc.cpp  tst_race.cpp  tst_test_main.cpp
DND-DM-Helper_GUI/ui/: npcbattlestats.ui  widget.ui
DND_GM_Helper/: main  main.cpp
DND_GM_Helper/conf/: NPC_conf.yaml  conf.yaml
DND_GM_Helper_GUI-v1.0-Linux/: DND_MG_Helper_GUI  README.md
Executable/Linux/DND_GM_Helper_GUI-v1.0-Linux/: README.md
GM_Helper/: CMakeLists.txt  README.md  main.cpp  setup.sh
conf/: NPC_conf.yaml  conf.yaml
